# luma-labs

./: LogicFlow PRD.md  LogicFlow TRD.md  LogicFlow Testing.md  README.md  Shopify App Ideas for Developers.txt
.github/workflows/: deploy.yml
apps/gatekeep/: README.md
apps/gatekeep/app/: .env.example  README.md  package-lock.json  package.json  shopify.app.toml  shopify.web.toml  tsconfig.json
apps/gatekeep/app/app/routes/: app._index.tsx  auth.$.tsx  webhooks.tsx
apps/gatekeep/app/app/styles/: animations.css
apps/gatekeep/app/extensions/gatekeep-validator/: Cargo.toml  shopify.extension.toml
apps/gatekeep/app/prisma/: schema.prisma
apps/gatekeep/docs/: APP_STORE_LISTING.md  Market Analysis Report_ Shopify Checkout Validation Landscape.md  POC-PLAN.md  PRD.md  PRIVACY_POLICY.md  SETUP.md  TERMS_OF_SERVICE.md  TRD.md  TROUBLESHOOTING.md
apps/gatekeep/poc/benches/: performance.rs
apps/gatekeep/poc/src/: models.rs
apps/logicflow/: README.md
apps/logicflow/app/: .gitignore  README.md  package-lock.json  package.json  shopify.app.logicflow.toml  shopify.app.toml  vite.config.ts
apps/logicflow/app/app/: shopify.server.ts
apps/logicflow/app/app/routes/: _index.tsx  app._index.tsx  app.tsx
apps/logicflow/app/app/styles/: animations.css
apps/logicflow/app/extensions/logicflow-validator/: Cargo.toml  shopify.extension.toml
apps/logicflow/app/prisma/: schema.prisma
apps/logicflow/docs/: POC-PLAN.md  PRD.md  SETUP.md  TRD.md  TROUBLESHOOTING.md
apps/logicflow/poc/: Cargo.toml
apps/logicflow/poc/src/: evaluator.rs  lib.rs  patterns.rs
(+30 files in other folders)
