[package]
name = "logicflow-poc"
version = "0.1.0"
edition = "2021"
description = "POC for LogicFlow checkout validation rule engine"

[lib]
name = "logicflow"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

